# linalg

./: .appveyor.yml  .travis.yml  README.md  appveyor.yml  linalg-ext.h  linalg-std.h  linalg.h  linalgx.h
samples/: .gitignore  CMakeLists.txt  Makefile  linalg-codegen.cpp  linalg-constant-expressions.cpp  linalg-expression-validity.cpp  linalg-quaternions.cpp  linalg-test.cpp  linalg-test.h  linalg-test2.cpp  test-constant-expressions.cpp  test-factory-functions.cpp  test-higher-order-functions.cpp  test-linalg.h  test-matrices.cpp  test-ostream-overloads.cpp  test-quaternions.cpp  test-user-defined-conversions.cpp
samples/msvc120/: .gitignore  linalg-codegen.vcxproj  linalg-codegen.vcxproj.filters  linalg-msvc120.sln  linalg-test.vcxproj  linalg-test.vcxproj.filters
samples/msvc140/: .gitignore  linalg-msvc140.sln  linalg-test.vcxproj  linalg-test.vcxproj.filters
samples/msvc140/linalg-test/: linalg-test.vcxproj  linalg-test.vcxproj.filters
samples/msvc150/: .gitignore  linalg-msvc150.sln  linalg-test.vcxproj  linalg-test.vcxproj.filters
samples/msvc150/linalg-test/: linalg-test.vcxproj
tests/: .gitignore  Makefile  generate-swizzles.cpp  include-linalg.cpp  test-constant-expressions.cpp  test-expression-validity.cpp  test-higher-order-functions.cpp  test-linalg-ext.cpp  test-linalg.cpp  test-linalg.h  test-linalgx.cpp  test-matrices.cpp  test-ostream-overloads.cpp  test-quaternions.cpp  test-scalar-accessors.cpp  test-user-defined-conversions.cpp
tests/msvc140/: linalg-test.vcxproj  linalg-test.vcxproj.filters
tests/msvc150/: linalg-test.vcxproj  (+1 more)
